ru.po: Updated Russian translation from Russian team <gnome-cyr@gnome.org>.

--- a/po/ru.po
+++ b/po/ru.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-02-26 16:37+0300\n"
-"PO-Revision-Date: 2004-03-19 13:39+0300\n"
+"PO-Revision-Date: 2004-03-19 14:47+0300\n"
 "Last-Translator: Dmitry G. Mastrukov <dmitry@taurussoft.org>\n"
 "Language-Team: Russian <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -2870,27 +2870,27 @@ msgstr "500 K"
 #: libnautilus-private/nautilus-global-preferences.c:129
 #: src/nautilus-file-management-properties.glade.h:3
 msgid "1 MB"
-msgstr "1 Мб"
+msgstr "1 МБ"
 
 #: libnautilus-private/nautilus-global-preferences.c:130
 #: src/nautilus-file-management-properties.glade.h:15
 msgid "3 MB"
-msgstr "3 Мб"
+msgstr "3 МБ"
 
 #: libnautilus-private/nautilus-global-preferences.c:131
 #: src/nautilus-file-management-properties.glade.h:18
 msgid "5 MB"
-msgstr "5 Мб"
+msgstr "5 МБ"
 
 #: libnautilus-private/nautilus-global-preferences.c:132
 #: src/nautilus-file-management-properties.glade.h:4
 msgid "10 MB"
-msgstr "10 Мб"
+msgstr "10 МБ"
 
 #: libnautilus-private/nautilus-global-preferences.c:133
 #: src/nautilus-file-management-properties.glade.h:6
 msgid "100 MB"
-msgstr "100 Мб"
+msgstr "100 МБ"
 
 #: libnautilus-private/nautilus-global-preferences.c:139
 msgid "Activate items with a _single click"
@@ -4417,7 +4417,7 @@ msgstr "Просмотреть папки"
 
 #: src/file-manager/fm-directory-view.c:5535
 msgid "_Delete from Trash"
-msgstr "У_далить из мусорной корзины"
+msgstr "_Удалить из мусорной корзины"
 
 #: src/file-manager/fm-directory-view.c:5537
 msgid "Delete all selected items permanently"
@@ -4437,7 +4437,7 @@ msgstr "Переместить каждый выделенный элемент 
 #: src/file-manager/fm-directory-view.c:5566
 #: src/file-manager/nautilus-directory-view-ui.xml.h:50
 msgid "_Delete"
-msgstr "У_далить"
+msgstr "_Удалить"
 
 #: src/file-manager/fm-directory-view.c:5586
 msgid "Ma_ke Links"
@@ -4936,7 +4936,7 @@ msgstr "_Выбрать другой значок..."
 
 #: src/file-manager/fm-properties-window.c:2333
 msgid "_Remove Custom Icon"
-msgstr "У_брать пользовательский значок"
+msgstr "_Убрать пользовательский значок"
 
 #: src/file-manager/fm-properties-window.c:2679
 msgid "_Read"
@@ -6018,11 +6018,11 @@ msgstr "1 Гб"
 
 #: src/nautilus-file-management-properties.glade.h:5
 msgid "100 KB"
-msgstr "100 Кб"
+msgstr "100 КБ"
 
 #: src/nautilus-file-management-properties.glade.h:21
 msgid "500 KB"
-msgstr "500 Кб"
+msgstr "500 КБ"
 
 #: src/nautilus-file-management-properties.glade.h:24
 msgid "<span weight=\"bold\">Behaviour</span>"
@@ -6541,7 +6541,7 @@ msgstr "Вверх"
 
 #: src/nautilus-navigation-window-ui.xml.h:25
 msgid "_Add Bookmark"
-msgstr "Доб_авить закладку"
+msgstr "_Добавить закладку"
 
 #: src/nautilus-navigation-window-ui.xml.h:26
 msgid "_Back"
@@ -6665,11 +6665,11 @@ msgstr "Фон и эмблемы"
 
 #: src/nautilus-property-browser.c:386
 msgid "_Remove..."
-msgstr " У_брать... "
+msgstr " _Убрать... "
 
 #: src/nautilus-property-browser.c:407
 msgid "_Add new..."
-msgstr "Доб_авить новый... "
+msgstr "_Добавить новый... "
 
 #: src/nautilus-property-browser.c:914
 #, c-format
@@ -6802,15 +6802,15 @@ msgstr "О_тменить удаление"
 
 #: src/nautilus-property-browser.c:2066
 msgid "_Add a New Pattern..."
-msgstr "Доб_авить новый шаблон..."
+msgstr "_Добавить новый шаблон..."
 
 #: src/nautilus-property-browser.c:2069
 msgid "_Add a New Color..."
-msgstr "Доб_авить новый цвет..."
+msgstr "_Добавить новый цвет..."
 
 #: src/nautilus-property-browser.c:2072
 msgid "_Add a New Emblem..."
-msgstr "Доб_авить новую эмблему..."
+msgstr "_Добавить новую эмблему..."
 
 #: src/nautilus-property-browser.c:2095
 msgid "Click on a pattern to remove it"
@@ -6838,15 +6838,15 @@ msgstr "Эмблемы:"
 
 #: src/nautilus-property-browser.c:2136
 msgid "_Remove a Pattern..."
-msgstr "У_брать шаблон..."
+msgstr "_Убрать шаблон..."
 
 #: src/nautilus-property-browser.c:2139
 msgid "_Remove a Color..."
-msgstr "У_брать цвет..."
+msgstr "_Убрать цвет..."
 
 #: src/nautilus-property-browser.c:2142
 msgid "_Remove an Emblem..."
-msgstr "У_брать эмблему..."
+msgstr "_Убрать эмблему..."
 
 #. Menu item in the search bar.
 #. Bracketed items are context, and are message
