--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-21  Mugurel Tudor  <mugurelu@go.ro>
+
+	* ro.po: Updated Romanian translation.
+
 2004-03-20  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
 	* hr.po: Updated Croatian translation.
