--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-21 Alastair McKinstry <mckinstry@debian.org>
+
+	* ga.po: Update Irish translation.
+
 2004-03-21  Mugurel Tudor  <mugurelu@go.ro>
 
 	* ro.po: Updated Romanian translation.
