--- a/po/ga.po
+++ b/po/ga.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-03-15 15:19+0100\n"
-"PO-Revision-Date: 2004-03-08 21:32+0000\n"
+"PO-Revision-Date: 2004-03-21 21:32+0000\n"
 "Last-Translator: Alastair McKinstry <mckinstry@computer.org>\n"
 "Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -228,7 +228,7 @@ msgstr ""
 #: components/image_properties/nautilus-image-properties-view.c:203
 #: data/static_bookmarks.xml.h:36
 msgid "Software"
-msgstr "Bógearra"
+msgstr "Bogearra"
 
 #: components/image_properties/nautilus-image-properties-view.c:222
 #, c-format
@@ -547,7 +547,7 @@ msgstr "Clábar"
 
 #: data/browser.xml.h:56
 msgid "Multimedia"
-msgstr ""
+msgstr "Ílmeánach"
 
 #: data/browser.xml.h:57
 msgid "New"
@@ -635,7 +635,7 @@ msgstr "Droim an Sneachta"
 
 #: data/browser.xml.h:78
 msgid "Sound"
-msgstr ""
+msgstr "Fuaim"
 
 #: data/browser.xml.h:79
 msgid "Special"
@@ -876,7 +876,7 @@ msgstr "Sun Wah Linux"
 
 #: data/static_bookmarks.xml.h:41
 msgid "Web Services"
-msgstr ""
+msgstr "Seirbishí Greasán"
 
 #: data/static_bookmarks.xml.h:42
 msgid "Ximian"
@@ -900,7 +900,7 @@ msgstr ""
 
 #: data/sysconfig.desktop.in.h:2 data/sysconfig.directory.in.h:2
 msgid "System Settings"
-msgstr ""
+msgstr "Roghnachais do chóras"
 
 #: icons/crux_eggplant/crux_eggplant.xml.h:1
 msgid "An Eggplant variation of the Crux theme."
@@ -1405,11 +1405,11 @@ msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:73
 msgid "Show status bar in new windows"
-msgstr ""
+msgstr "Taispéan barra stadás san fhuinneogaí nua"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:74
 msgid "Show toolbar in new windows"
-msgstr ""
+msgstr "Taispeán barra uirlís san fhuinneogaí nua"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:75
 msgid "Side pane view"
@@ -1566,11 +1566,11 @@ msgstr "Leithead atá ag an pána ar an thaobh"
 
 #: libnautilus-private/nautilus-column-chooser.c:365
 msgid "Move _Up"
-msgstr "Bóg S_uas"
+msgstr "Bog S_uas"
 
 #: libnautilus-private/nautilus-column-chooser.c:374
 msgid "Move _Down"
-msgstr "Bóg S_íos"
+msgstr "Bog S_íos"
 
 #: libnautilus-private/nautilus-column-chooser.c:383
 msgid "_Show"
@@ -2146,7 +2146,7 @@ msgstr " (%d"
 #: libnautilus-private/nautilus-file-operations.c:2295
 #, c-format
 msgid "Unknown GnomeVFSXferProgressStatus %d"
-msgstr ""
+msgstr "GnomeVFXSferProgressStatus gan fhois %d"
 
 #. localizers: progress dialog title
 #: libnautilus-private/nautilus-file-operations.c:1870
@@ -2162,7 +2162,7 @@ msgstr ""
 #: libnautilus-private/nautilus-file-operations.c:1874
 #: libnautilus-private/nautilus-file-operations.c:1885
 msgid "Moving"
-msgstr ""
+msgstr "Ag bogadh"
 
 #: libnautilus-private/nautilus-file-operations.c:1875
 msgid "Preparing to Move to Trash..."
@@ -2171,7 +2171,7 @@ msgstr ""
 #. localizers: progress dialog title
 #: libnautilus-private/nautilus-file-operations.c:1881
 msgid "Moving files"
-msgstr ""
+msgstr "Ag bogadh comhaid"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1883
@@ -2212,7 +2212,7 @@ msgstr ""
 #. localizers: progress dialog title
 #: libnautilus-private/nautilus-file-operations.c:1907
 msgid "Copying files"
-msgstr ""
+msgstr "Ag Cópáil comhaid"
 
 #. localizers: label prepended to the progress count
 #: libnautilus-private/nautilus-file-operations.c:1909
@@ -5965,7 +5965,7 @@ msgstr "_Comhad"
 
 #: src/nautilus-shell-ui.xml.h:38
 msgid "_Help"
-msgstr "C_uidiú"
+msgstr "Cab_hair"
 
 #: src/nautilus-shell-ui.xml.h:40
 msgid "_Profiler"
@@ -6265,93 +6265,93 @@ msgstr "Riarthóir ar an líontán"
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Féach ar na riarthóir líontán i Nautilus"
 
-#~ msgid "Search Results"
-#~ msgstr "Toradh an Curdach"
+msgid "Search Results"
+msgstr "Toradh an Curdach"
 
-#~ msgid "Error During Search"
-#~ msgstr "Feadbh ar rith an Cuardach"
+msgid "Error During Search"
+msgstr "Feadbh ar rith an Cuardach"
 
-#~ msgid "Where"
-#~ msgstr "Cén h'Áit"
+msgid "Where"
+msgstr "Cén h'Áit"
 
-#~ msgid "_Reveal in New Window"
-#~ msgid_plural "Reveal in %d _New Windows"
-#~ msgstr[0] "_Foilsigh i Fuinneog _Nua"
-#~ msgstr[1] "_Foilsigh i %d Fuinneoga _Nua"
-#~ msgstr[2] "_Foilsigh i %d Fuinneoga _Nua"
+msgid "_Reveal in New Window"
+msgid_plural "Reveal in %d _New Windows"
+msgstr[0] "_Foilsigh i Fuinneog _Nua"
+msgstr[1] "_Foilsigh i %d Fuinneoga _Nua"
+msgstr[2] "_Foilsigh i %d Fuinneoga _Nua"
 
-#~ msgid "%I:%M %p, %x"
-#~ msgstr "%I:%M %p, %x"
+msgid "%I:%M %p, %x"
+msgstr "%I:%M %p, %x"
 
 #, fuzzy
-#~ msgid "Reveal in New Window"
-#~ msgstr "Oscail i an Fuinneog _Nua"
+msgid "Reveal in New Window"
+msgstr "Oscail i an Fuinneog _Nua"
 
-#~ msgid "Find Them!"
-#~ msgstr "Cuardaigh iad!"
+msgid "Find Them!"
+msgstr "Cuardaigh iad!"
 
-#~ msgid "Find:"
-#~ msgstr "Cuardaigh:"
+msgid "Find:"
+msgstr "Cuardaigh:"
 
-#~ msgid "New Server"
-#~ msgstr "Riarthóir Nua"
+msgid "New Server"
+msgstr "Riarthóir Nua"
 
-#~ msgid "*"
-#~ msgstr "*"
+msgid "*"
+msgstr "*"
 
-#~ msgid "_Connect"
-#~ msgstr "_Cónaisc"
+msgid "_Connect"
+msgstr "_Cónaisc"
 
-#~ msgid "0 items"
-#~ msgstr "0 mí"
+msgid "0 items"
+msgstr "0 mí"
 
-#~ msgid "0 folders"
-#~ msgstr "0 comhadlann"
+msgid "0 folders"
+msgstr "0 comhadlann"
 
-#~ msgid "0 files"
-#~ msgstr "0 comhad"
+msgid "0 files"
+msgstr "0 comhad"
 
-#~ msgid "1 item"
-#~ msgstr "mír amhain"
+msgid "1 item"
+msgstr "mír amhain"
 
-#~ msgid "1 folder"
-#~ msgstr "comhadlann amhain"
+msgid "1 folder"
+msgstr "comhadlann amhain"
 
-#~ msgid "1 file"
-#~ msgstr "comhad amhain"
+msgid "1 file"
+msgstr "comhad amhain"
 
-#~ msgid "%u items"
-#~ msgstr "%u mí"
+msgid "%u items"
+msgstr "%u mí"
 
-#~ msgid "C_hoose"
-#~ msgstr "P_ioc"
+msgid "C_hoose"
+msgstr "P_ioc"
 
-#~ msgid "1 folder selected"
-#~ msgstr "comhadlann amhain roghnaite"
+msgid "1 folder selected"
+msgstr "comhadlann amhain roghnaite"
 
-#~ msgid "Other _Viewer..."
-#~ msgstr "Amha_rcóir Eile..."
+msgid "Other _Viewer..."
+msgstr "Amha_rcóir Eile..."
 
-#~ msgid "A _Viewer..."
-#~ msgstr "Amha_rcóir..."
+msgid "A _Viewer..."
+msgstr "Amha_rcóir..."
 
-#~ msgid "Open in %d New Windows"
-#~ msgstr "Oscail %d i Fhuinneoga Nua"
+msgid "Open in %d New Windows"
+msgstr "Oscail %d i Fhuinneoga Nua"
 
-#~ msgid "File name"
-#~ msgstr "Ainm an Comhad"
+msgid "File name"
+msgstr "Ainm an Comhad"
 
-#~ msgid "Reveal in %d _New Windows"
-#~ msgstr "Foilsigh i %d Fuinneogaí _Nua"
+msgid "Reveal in %d _New Windows"
+msgstr "Foilsigh i %d Fuinneogaí _Nua"
 
-#~ msgid "Write to CD"
-#~ msgstr "Scríobh go CD"
+msgid "Write to CD"
+msgstr "Scríobh go CD"
 
-#~ msgid "Close this window"
-#~ msgstr "Dún an fhuinneog seo"
+msgid "Close this window"
+msgstr "Dún an fhuinneog seo"
 
-#~ msgid "Write contents to a CD"
-#~ msgstr "Scríobh na ábhar go dtí CD"
+msgid "Write contents to a CD"
+msgstr "Scríobh na ábhar go dtí CD"
 
-#~ msgid "_Write to CD"
-#~ msgstr "_Scríobh go CD"
+msgid "_Write to CD"
+msgstr "_Scríobh go CD"
