Updated traditional Chinese translation.
	* zh_TW.po: Updated traditional Chinese translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,10 @@
 2004-03-22  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
+
+2004-03-22  Abel Cheung  <maddog@linux.org.hk>
+
+	* zh_TW.po: Updated traditional Chinese translation.
 	* ar.po: Mark wrong entry as fuzzy (msgfmt check failed).
 
 2004-03-21 Alastair McKinstry <mckinstry@debian.org>
