--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>
+
+        * pa.po: Updated Punjabi translation by 
+        Amanpreet Singh Alam <amanlinux@netscape.net>.
+
 2004-03-22  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
