--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,7 @@
-This is nautilus 2.5.91, the file manager for the Gnome 2 desktop.
+This is nautilus 2.6.0, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.5.91 are:
+* Translation updates
 
 Major changes since 2.5.90 are:
 * Handle failures when opening new window better (don't loop)
