--- a/po/tr.po
+++ b/po/tr.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-03-15 00:01+0200\n"
+"POT-Creation-Date: 2004-03-15 15:19+0100\n"
 "PO-Revision-Date: 2004-03-15 00:09+0200\n"
 "Last-Translator: Baris Cicek <baris@teamforce.name.tr>\n"
 "Language-Team: Turkish <gnome-turk@gnome.org>\n"
@@ -1440,8 +1440,10 @@ msgstr ""
 "halde hem klasörleri hem de dosyaları gösterir."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:35
-msgid "If set to true, newly opened windows will have the location bar visible."
-msgstr "Eğer seçiliyse, yeni açılan pencerelerin konum çubukları görünür halde olur."
+msgid ""
+"If set to true, newly opened windows will have the location bar visible."
+msgstr ""
+"Eğer seçiliyse, yeni açılan pencerelerin konum çubukları görünür halde olur."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
 msgid "If set to true, newly opened windows will have the side pane visible."
@@ -1449,11 +1451,13 @@ msgstr "Eğer seçiliyse, yeni açılan pencerelerin yan paneli görüntülenece
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:37
 msgid "If set to true, newly opened windows will have the status bar visible."
-msgstr "Eğer seçiliyise, yeni açılan pencerelerin durum çubuğu görüntülenecektir."
+msgstr ""
+"Eğer seçiliyise, yeni açılan pencerelerin durum çubuğu görüntülenecektir."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:38
 msgid "If set to true, newly opened windows will have toolbars visible."
-msgstr "Eğer seçiliyse, yeni açılan pencerelerin araç çubuğu görüntülenecektir."
+msgstr ""
+"Eğer seçiliyse, yeni açılan pencerelerin araç çubuğu görüntülenecektir."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:39
 msgid ""
@@ -1557,7 +1561,8 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
-msgstr "Eğer bu seçiliyse, bilgisayar konumuna olan simge bağı masaüstüne konacak."
+msgstr ""
+"Eğer bu seçiliyse, bilgisayar konumuna olan simge bağı masaüstüne konacak."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
@@ -1600,12 +1605,15 @@ msgstr ""
 "yerleştirilecek."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
-msgid "If true, labels will be placed beside icons rather than underneath them."
-msgstr "Eğer seçiliyse, etiketler simgelerin altına değil üstüne yerleştirilecek."
+msgid ""
+"If true, labels will be placed beside icons rather than underneath them."
+msgstr ""
+"Eğer seçiliyse, etiketler simgelerin altına değil üstüne yerleştirilecek."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
 msgid "If true, new windows will use manual layout by default."
-msgstr "Eğer seçiliyse, yeni pencereler öntanımlı olarak elle düzenleme kullanacak."
+msgstr ""
+"Eğer seçiliyse, yeni pencereler öntanımlı olarak elle düzenleme kullanacak."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
 msgid ""
@@ -2091,7 +2099,8 @@ msgstr "Amblem kurulamadı."
 # src/nautilus-property-browser.c:1420
 #: libnautilus-private/nautilus-emblem-utils.c:198
 msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
-msgstr "Üzgünüm, ancak yeni amblem için boş olmayan bir anahtar kelime girmelisiniz."
+msgstr ""
+"Üzgünüm, ancak yeni amblem için boş olmayan bir anahtar kelime girmelisiniz."
 
 # src/nautilus-property-browser.c:1421 src/nautilus-property-browser.c:1424
 # src/nautilus-property-browser.c:1428 src/nautilus-property-browser.c:1457
@@ -2104,7 +2113,8 @@ msgstr "Amblem Kurulamadı"
 
 # src/nautilus-property-browser.c:1423
 #: libnautilus-private/nautilus-emblem-utils.c:203
-msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid ""
+"Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Üzgünüm, ancak amblem anahtar kelimesi sadece harf, rakam ve boşluk "
 "karakterleri içerebilir."
@@ -2117,7 +2127,8 @@ msgstr ""
 #: libnautilus-private/nautilus-emblem-utils.c:213
 #, c-format
 msgid "Sorry, but there is already an emblem named \"%s\"."
-msgstr "\"%s\" isimli bir amblem zaten bulunuyor. Lütfen farklı bir isim seçin."
+msgstr ""
+"\"%s\" isimli bir amblem zaten bulunuyor. Lütfen farklı bir isim seçin."
 
 #: libnautilus-private/nautilus-emblem-utils.c:214
 msgid "Please choose a different emblem name."
@@ -2232,7 +2243,8 @@ msgstr "Kopyalarken hata oluştu."
 #: libnautilus-private/nautilus-file-operations.c:638
 #, c-format
 msgid "\"%s\" cannot be copied because you do not have permissions to read it."
-msgstr "\"%s\" kopyalanamadı çünkü onu okumak için yeterli erişim hakkınız yok."
+msgstr ""
+"\"%s\" kopyalanamadı çünkü onu okumak için yeterli erişim hakkınız yok."
 
 # libnautilus-private/nautilus-file-operations.c:874
 #: libnautilus-private/nautilus-file-operations.c:658
@@ -3950,7 +3962,8 @@ msgid "This drop target only supports local files."
 msgstr "Bu bırakma hedefi sadece yerel dosyalar için destekleniyor."
 
 #: libnautilus-private/nautilus-program-choosing.c:1276
-msgid "To open non-local files copy them to a local folder and then drop them again."
+msgid ""
+"To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Yerel olmayan dosyaları açmak için, onları yerel bir klasöre kopyalayın daha "
 "sonra tekrar bırakmayı deneyin."
@@ -4278,7 +4291,8 @@ msgstr "\"%s\" dosyasını kalıcı olarak silmek istediğinize emin misiniz?"
 #: src/file-manager/fm-directory-view.c:897
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural "Are you sure you want to permanently delete the %d selected items?"
+msgid_plural ""
+"Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] "%d seçili öğeyi kalıcı olarak silmek istediğinizden emin misiniz?"
 msgstr[1] "%d seçili öğeyi kalıcı olarak silmek istediğinizden emin misiniz?"
 
@@ -4332,7 +4346,7 @@ msgstr[1] " (%d öğe içeriyor)"
 msgid " (containing a total of %d item)"
 msgid_plural " (containing a total of %d items)"
 msgstr[0] " (toplam olarak %d öğe içeriyor)"
-msgstr[1]  " (toplam olarak %d öğe içeriyor)"
+msgstr[1] " (toplam olarak %d öğe içeriyor)"
 
 # src/file-manager/fm-directory-view.c:1216
 # src/file-manager/fm-directory-view.c:1226
@@ -4395,7 +4409,8 @@ msgstr "%s%s, %s"
 #: src/file-manager/fm-directory-view.c:1972
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
-msgstr "\"%s\" klasörü Nautilusun işleyebileceğinden daha fazla dosya içeriyor."
+msgstr ""
+"\"%s\" klasörü Nautilusun işleyebileceğinden daha fazla dosya içeriyor."
 
 #: src/file-manager/fm-directory-view.c:1978
 msgid "Some files will not be displayed."
@@ -4423,8 +4438,10 @@ msgstr "Öğeler çöpe taşınamadı, bunları kalıcı olarak silmek ister mis
 
 # src/file-manager/fm-directory-view.c:2591
 #: src/file-manager/fm-directory-view.c:3255
-msgid "Cannot move some items to trash, do you want to delete these immediately?"
-msgstr "Kimi öğeler çöpe taşınamadı, bunları kalıcı olarak silmek ister misiniz?"
+msgid ""
+"Cannot move some items to trash, do you want to delete these immediately?"
+msgstr ""
+"Kimi öğeler çöpe taşınamadı, bunları kalıcı olarak silmek ister misiniz?"
 
 # src/file-manager/fm-directory-view.c:2608
 #: src/file-manager/fm-directory-view.c:3262
@@ -4435,7 +4452,8 @@ msgstr "Hemen Sil?"
 #: src/file-manager/fm-directory-view.c:3294
 #, c-format
 msgid "Are you sure you want to permanently delete \"%s\" from the trash?"
-msgstr "\"%s\" dosyasını çöpten kalıcı olarak silmek istediğinize emin misiniz?"
+msgstr ""
+"\"%s\" dosyasını çöpten kalıcı olarak silmek istediğinize emin misiniz?"
 
 # src/file-manager/fm-directory-view.c:2639
 #: src/file-manager/fm-directory-view.c:3298
@@ -4446,8 +4464,10 @@ msgid ""
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] "%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
-msgstr[1] "%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
+msgstr[0] ""
+"%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
+msgstr[1] ""
+"%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
 
 # src/file-manager/fm-directory-view.c:2643
 #: src/file-manager/fm-directory-view.c:3307
@@ -4519,7 +4539,8 @@ msgstr "\"%s\" şablomundan Belge oluştur"
 
 #: src/file-manager/fm-directory-view.c:4711
 msgid "All executable files in this folder will appear in the Scripts menu."
-msgstr "Bu klasördeki tüm çalıştırılabilir dosyalar Betikler menüsünde görünecek."
+msgstr ""
+"Bu klasördeki tüm çalıştırılabilir dosyalar Betikler menüsünde görünecek."
 
 #: src/file-manager/fm-directory-view.c:4713
 msgid ""
@@ -4588,17 +4609,23 @@ msgstr "Dosyaları Yapıştır komutunu seçerseniz \"%s\" kopyalanacaktır"
 
 #: src/file-manager/fm-directory-view.c:4858
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste Files command"
-msgid_plural "The %d selected items will be moved if you select the Paste Files command"
+msgid ""
+"The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be moved if you select the Paste Files command"
 msgstr[0] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe taşınacak"
 msgstr[1] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe taşınacak"
 
 #: src/file-manager/fm-directory-view.c:4865
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste Files command"
-msgid_plural "The %d selected items will be copied if you select the Paste Files command"
-msgstr[0] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
-msgstr[1] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
+msgid ""
+"The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be copied if you select the Paste Files command"
+msgstr[0] ""
+"Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
+msgstr[1] ""
+"Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
 
 # src/file-manager/fm-directory-view.c:2596
 #: src/file-manager/fm-directory-view.c:4947
@@ -4792,8 +4819,10 @@ msgstr "Açma İşlemi İptal Edilsin mi?"
 # src/nautilus-window-manage-views.c:657
 #: src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid "You do not have the permissions necessary to view the contents of \"%s\"."
-msgstr "\"%s\" içeriğine bakmak için gerekli erişim haklarına sahip değilsiniz."
+msgid ""
+"You do not have the permissions necessary to view the contents of \"%s\"."
+msgstr ""
+"\"%s\" içeriğine bakmak için gerekli erişim haklarına sahip değilsiniz."
 
 #: src/file-manager/fm-error-reporting.c:61
 #, c-format
@@ -4819,13 +4848,16 @@ msgstr "Dizin Gösterilmesinde Hata"
 # src/file-manager/fm-error-reporting.c:55
 #: src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid "The name \"%s\" is already used in this folder. Please use a different name."
-msgstr "\"%s\" adı bu klasörde zaten kullanılıyor. Lütfen başka bir isim kullanın."
+msgid ""
+"The name \"%s\" is already used in this folder. Please use a different name."
+msgstr ""
+"\"%s\" adı bu klasörde zaten kullanılıyor. Lütfen başka bir isim kullanın."
 
 # src/file-manager/fm-error-reporting.c:60
 #: src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgid ""
+"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr "Bu klasörde \"%s\" bulunamadı. Silinmiş, ya da taşınmış olabilir mi?"
 
 # src/file-manager/fm-error-reporting.c:65
@@ -4879,8 +4911,10 @@ msgstr "Yeniden Adlandırma Hatası"
 # src/file-manager/fm-error-reporting.c:112
 #: src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid "You do not have the permissions necessary to change the group of \"%s\"."
-msgstr "\"%s\"nin grubunu değiştirmek için gerekli erişim haklarına sahip değilsiniz."
+msgid ""
+"You do not have the permissions necessary to change the group of \"%s\"."
+msgstr ""
+"\"%s\"nin grubunu değiştirmek için gerekli erişim haklarına sahip değilsiniz."
 
 # src/file-manager/fm-error-reporting.c:116
 #: src/file-manager/fm-error-reporting.c:169
@@ -4929,7 +4963,8 @@ msgstr "Sahibi Değiştirilirken Hata"
 # src/file-manager/fm-error-reporting.c:178
 #: src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid ""
+"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
 "\"%s\"nin erişim hakları değiştirilemedi çünkü dosya salt okunur disk "
 "üzerinde"
@@ -5315,7 +5350,8 @@ msgstr "_Yapışık"
 # src/file-manager/fm-properties-window.c:1664
 #: src/file-manager/fm-properties-window.c:2875
 msgid "You are not the owner, so you can't change these permissions."
-msgstr "Dosyanın sahibi olmadığınız için bu erişim haklarını değiştiremezsiniz."
+msgstr ""
+"Dosyanın sahibi olmadığınız için bu erişim haklarını değiştiremezsiniz."
 
 # src/file-manager/fm-properties-window.c:1677
 #: src/file-manager/fm-properties-window.c:2889
@@ -5488,7 +5524,8 @@ msgstr "Yeni bir GNOME terminali aç"
 
 # src/file-manager/nautilus-desktop-icon-view-ui.xml.h:10
 #: src/file-manager/nautilus-desktop-icon-view-ui.xml.h:8
-msgid "Show a window that lets you set your desktop background's pattern or color"
+msgid ""
+"Show a window that lets you set your desktop background's pattern or color"
 msgstr "Masaüstü arkaplanı rengi ya da desenini ayarlayacak pencere aç"
 
 # src/file-manager/nautilus-desktop-icon-view-ui.xml.h:9
@@ -5578,7 +5615,8 @@ msgid "Mount the selected volume"
 msgstr "Seçilen sistemi bağla"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:23
-msgid "Move or copy files previously selected by a Cut Files or Copy Files command"
+msgid ""
+"Move or copy files previously selected by a Cut Files or Copy Files command"
 msgstr ""
 "Daha önce Dosyaları Kes ya da Dosyaları Kopyala komutu yardımıyla seçilen "
 "dosyaları taşı ya da kopyala"
@@ -6843,7 +6881,8 @@ msgstr "%s yan panelinde bir hata oluştu ve devam edemiyor."
 # src/nautilus-window-manage-views.c:903
 #: src/nautilus-navigation-window.c:1122
 msgid "If this keeps happening, you might want to turn this panel off."
-msgstr "Eğer bu hata oluşmaya devam ederse, bu paneli iptal etmek isteyebilirsiniz."
+msgstr ""
+"Eğer bu hata oluşmaya devam ederse, bu paneli iptal etmek isteyebilirsiniz."
 
 # src/nautilus-window-manage-views.c:908
 #: src/nautilus-navigation-window.c:1125
@@ -7110,7 +7149,8 @@ msgstr "Bir _Amblemi Sil..."
 # src/nautilus-shell-ui.xml.h:4
 #: src/nautilus-shell-ui.xml.h:2
 msgid "Choose a view for the current location, or modify the set of views"
-msgstr "Şimdiki konum için bir görünüm ekleyin, ya da görünüm listesini düzenleyin"
+msgstr ""
+"Şimdiki konum için bir görünüm ekleyin, ya da görünüm listesini düzenleyin"
 
 # components/notes/Nautilus_View_notes.oaf.in.h:3
 #: src/nautilus-shell-ui.xml.h:3
@@ -7440,7 +7480,8 @@ msgstr "Nautilus dosyanın hangi türde olduğunu algılayamadı."
 # src/nautilus-window-manage-views.c:1330
 #: src/nautilus-window-manage-views.c:1339
 msgid "Nautilus has no installed viewer capable of displaying the file."
-msgstr "Nautilus'e dosyayı gösterebilecek yetenekte bir görüntüleyici kurulmamış."
+msgstr ""
+"Nautilus'e dosyayı gösterebilecek yetenekte bir görüntüleyici kurulmamış."
 
 # src/nautilus-window-manage-views.c:1342
 #: src/nautilus-window-manage-views.c:1352
@@ -7465,7 +7506,8 @@ msgstr "\"%s\" gösterilemiyor, çünkü \"%s\" makinesi bulunamadı."
 
 # src/nautilus-window-manage-views.c:1358
 #: src/nautilus-window-manage-views.c:1379
-msgid "Check that the spelling is correct and that your proxy settings are correct."
+msgid ""
+"Check that the spelling is correct and that your proxy settings are correct."
 msgstr "Yazım yanlışlarını ve vekil ayarlarınızın doğruluğunu kontrol edin."
 
 # src/nautilus-window-manage-views.c:1364
@@ -7490,7 +7532,8 @@ msgstr "Yerel ağda bir SMB sunucusunun çalışıp çalışmadığını kontrol
 msgid ""
 "Searching is unavailable right now, because you either have no index, or the "
 "search service isn't running."
-msgstr "Şu anda arama yapılamaz, çünkü indeksiniz yok, veya arama servisi çalışmıyor."
+msgstr ""
+"Şu anda arama yapılamaz, çünkü indeksiniz yok, veya arama servisi çalışmıyor."
 
 # src/nautilus-window-manage-views.c:1376
 #: src/nautilus-window-manage-views.c:1407
@@ -7625,4 +7668,3 @@ msgstr "Ağ Sunucuları"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Nautilus dosya yöneticisinde ağ sunucularını görüntüle"
-
