--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-03-22  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS: 
+	* configure.in:
+	Update to 2.6.0
+
 === nautilus 2.5.91 ===
 
 2004-03-15  Alexander Larsson  <alexl@redhat.com>
