post release version bump

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-03-22  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump version to 2.6.1 post releast
+
+=== nautilus 2.6.0 ===
+
+2004-03-22  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS: 
 	* configure.in:
 	Update to 2.6.0
