--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -3,6 +3,8 @@
         * pa.po: Updated Punjabi translation by 
         Amanpreet Singh Alam <amanlinux@netscape.net>.
 
+=== nautilus 2.6.0 ===
+
 2004-03-22  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation.
