--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-22  Gareth Owen  <gowen72@yahoo.com>
+
+	* en_GB.po: Updated British translation
+
 2004-03-22  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * pa.po: Updated Punjabi translation by 
