--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-23  Priit Laes  <plaes@cvs.gnome.org>
+
+	* et.po: Translation updated.
+
 2004-03-22  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British translation
