--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-24  Adam Weinberger <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-03-23  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
