--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-25  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Require libgnomeui 2.6.0
+
 2004-03-22  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
