--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-03-26  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-properties-window.c (get_target_file_for_original_file):
+	Fix unref of volume/drive that we didn't ref.
+
 2004-03-25  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
